# creatio-ai-knowledge-hub

./: .editorconfig  .env.example  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitignore.backup.20250806_211946  .prettierignore  .prettierrc.js  AI_KNOWLEDGE_HUB_GUIDE.md  AI_SERVER_SETUP_GUIDE.md  CREATIO_DEVELOPMENT_LEARNING_GUIDE.md  DEVELOPMENT.md  DOCUMENT_PROCESSING.md  Dockerfile  FINAL_INTEGRATION_SUMMARY.md  INTEGRATION_SUMMARY.md  Makefile  PROCESSING_REPORT.md  PROJECT_STRUCTURE_OVERVIEW.md  README.md  README_MERGED.md  README_ORIGINAL.md  README_SELENIUM_SCRAPER.md  README_TRANSCRIPTION.md  RENAME_SUMMARY.md  SETUP_COMPLETE.md  SYSTEM_ASSESSMENT_REPORT.md  VALIDATION_REPORT.md  VERSIONING_STRATEGY.md  VIDEO_CONTENT_STATUS.md  academy_docs_scraper.py  access_investigation_20250728_141516.json  ai_knowledge_hub_integration.py  analyze_course_page.py  analyze_creatio_structure.py  authenticated_knowledge_hub_scraper.py  azure-pipelines.yml  backup_manifest.json  cleanup_duplicates.py  (+62 more)
.github/workflows/: ci-cd.yml  test-pipeline.yml
ai_handoff_notes/: README.md  template.md
ai_knowledge_hub/: INTEGRATION_SUMMARY.md  enhanced_mcp_server.py  integration_report.json  mcp_server_config.json
ai_knowledge_hub/command_reference/: README.md  developer_course_commands.json
ai_knowledge_hub/processed_pdfs/: 04a8f92b7f0e.json  0d8c1c94a6ac.json  27276e54b313.json  2d2e22451694.json  376c4c757de4.json  38bec6aacd2b.json  4d8790aa1530.json  a0ef9f2541a8.json  addfd1e21857.json  bda5cfd0d222.json  ca3cafc45c28.json  ccbbced9d46e.json  dae911bfb043.json  e8c5b73e93de.json
ai_knowledge_hub/processed_videos/: 00c0d9c85309.json  0bac334fdee7.json  1ef702163ad0.json  2cf1ccd103ed.json  323e73c9889e.json  5ec4f4200f2e.json  6dd3fd41c2f4.json  94f242f6b98e.json  a0bdf5f21b6e.json  a76b4482f3f4.json  db306ec3abcf.json  eac8aef2e9d8.json  f9a1e3e989fc.json
ai_knowledge_hub/search_index/: master_index.json  topic_index.json
ai_knowledge_hub/solutions_hub/: integration_report.json  scraping_report.json
ai_optimization/: content_summarizer.py  developer_course_processor.py  document_chunker.py  embedding_generator.py
backup/20250724_121451/: .env.template  config.yaml  pyvenv.cfg  requirements.txt
backups/: 20250801_160658_creatio_courses.json
clio-scripts/: CLIO_WORKFLOWS.md  README.md  clio-templates.sh  setup-clio.sh
cloud_backup/: README.md  backup_manifest.json
config/: api_config.yaml  database.config  remote_connections.yaml
config/environments/: development.env  (+1 more)
creatio-academy-archive/: README.md  config.py  course_metadata.json  database_setup.py  extract_resources.py  extract_video_resources.py  requirements.txt  scrapy.cfg  sitemap.json  test_transcription.py  transcribe_videos.py  video_index.json  video_metadata.json
creatio-academy-db/: README.md  manifest.json
creatio-installation/: INSTALLATION_COMPLETED.md
creatio_docs_20250801_160431/: REPORT.md  all_resources.json  organized_resources.json  summary.json
docs/: DATABASE_SETUP.md  MAINTENANCE_PROCEDURES.md  NEW_DEVELOPER_QUICKSTART.md  README.md  STEP15_COMPLETION_SUMMARY.md  STEP15_FINAL_VALIDATION_REPORT.md  TESTING_BEST_PRACTICES.md  TESTING_FRAMEWORK_SETUP.md  TROUBLESHOOTING_FAQ.md  ci-cd-maintenance.md  monitoring-and-logging.md
documentation/: INDEX.json
downloads/: download_progress.json
elearning_resources_20250801_160225/: REPORT.md  all_resources.json  organized_resources.json  summary.json
iis-setup/: 00-main-setup.ps1  01-enable-iis-features.ps1  02-configure-application-pools.ps1  03-setup-ssl-certificates.ps1  04-create-iis-sites.ps1  05-configure-permissions.ps1  README.md
monitoring/: alert_rules.yml  logging_config.py  monitoring.py  prometheus.yml
processed_data/: cleaned_data.csv
scraped_courses/: SCRAPING_REPORT.md  scraping_summary.json
scripts/: INDEX.json  backup_database.sh  deploy.sh  example_scraper.py  restore_database.sh  run-tests.sh  run_pipeline.sh  setup-dev.sh  setup-monitoring.sh  smoke-tests.sh  test_database.sh  test_integration.py  test_remote_connections.sh
templates/: error_handler.py  rate_limiter.py  utils.py
tests/: conftest.py
utils/: cli.py
videos/: INDEX.json
(+2779 files in other folders)
